compiler/src/test/resources/golden/errors/type_map_key_checked_at_instantiation.dawn
# spec §2.2: key validity is enforced where a concrete Map/Set type is formed —
# a type annotation, or the instantiation of a generic call. The callee's name
# does not matter: a user wrapper around the creators is caught the same way.

fn make[K, V](k: K, v: V) -> Map[K, V] = map_insert(map_empty(), k, v)

pub fn main() -> Unit !io = {
  let m = make(1.5, "x")
  println("${map_size(m)}")
}
