compiler/src/test/resources/golden/errors/type_map_key_checked_at_instantiation.err
error: `Float` cannot be part of a Map/Set key type: NaN and -0.0 give Float two different equalities, so no hash can agree with `==`
  --> type_map_key_checked_at_instantiation.dawn:10:11
   |
10 |   let m = make(1.5, "x")
   |           ^^^^^^^^^^^^^^
  = hint: key by an Int encoding (scaled integer, bits) or a String rendering instead
